fixed non mobile sign up styling

--- a/src/components/SignupForm/SignupForm.css
+++ b/src/components/SignupForm/SignupForm.css
@@ -5,7 +5,7 @@
     align-items: center;
     margin: 10vw 0vw 5vw 33vw;
     background-color: beige;
-    height: 62vh;
+    height: 65vh;
     width: 30vw;
     box-shadow: 0px 0px 100px 20px blue;
 }
@@ -14,9 +14,9 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin: 10px 0px 10px 0px;
-    width: 230px;
-    height: 340px;
+    margin: 0px 0px 10px 0px;
+    width: 200px;
+    height: 390px;
     border: solid 1px black;
 }
 
